fix left-side scrollbar on intro

--- a/hr_core/static_src/css/base/core.css
+++ b/hr_core/static_src/css/base/core.css
@@ -215,7 +215,7 @@ html.has-vh-fix {
 }
 
 html {
-    scrollbar-gutter: stable both-edges;
+    scrollbar-gutter: stable;
 }
 
 html,
